{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 65,
  "lineage": "4c978f5d-10b0-abff-a804-f94f6d6ccdac",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006f82a1d5a27da54",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:instance/i-09c5eae111612faf6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-ec2-profile",
            "id": "i-09c5eae111612faf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ee3cfce7dda8b59",
            "private_dns": "ip-10-0-1-184.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-13-126-73-231.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.73.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039f77b970527e8f6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0866f53c3575962c1",
            "tags": {
              "Name": "prod-jenkins-master"
            },
            "tags_all": {
              "Name": "prod-jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0994164b3e5ebb658"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.asg.aws_iam_instance_profile.ec2_profile",
            "module.asg.aws_iam_role.ec2_role",
            "module.jenkins.data.aws_ami.ubuntu",
            "module.security.aws_security_group.jenkins_master",
            "module.vpc.aws_subnet.mgmt_public_subnet_1a",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006f82a1d5a27da54",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:instance/i-027cd7576ccfde923",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-ec2-profile",
            "id": "i-027cd7576ccfde923",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d240c0da5ecea689",
            "private_dns": "ip-10-0-1-102.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-65-2-39-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.39.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cc9c3ecab61d74b8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0866f53c3575962c1",
            "tags": {
              "Name": "prod-jenkins-slave"
            },
            "tags_all": {
              "Name": "prod-jenkins-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aab4dc1000ffd5a0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.asg.aws_iam_instance_profile.ec2_profile",
            "module.asg.aws_iam_role.ec2_role",
            "module.jenkins.data.aws_ami.ubuntu",
            "module.security.aws_security_group.jenkins_master",
            "module.security.aws_security_group.jenkins_slave",
            "module.vpc.aws_subnet.mgmt_public_subnet_1a",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-internal-nlb/ea47ca8ed5b4aef8",
            "arn_suffix": "net/prod-internal-nlb/ea47ca8ed5b4aef8",
            "dns_name": "prod-internal-nlb-ea47ca8ed5b4aef8.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-internal-nlb/ea47ca8ed5b4aef8",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-internal-nlb",
            "security_groups": [
              "sg-0aea362f478a36742"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bd03bf4d3fe8358"
              },
              {
                "subnet_id": "subnet-09c710b06857201be"
              }
            ],
            "subnets": [
              "subnet-03bd03bf4d3fe8358",
              "subnet-09c710b06857201be"
            ],
            "tags": {
              "Name": "prod-internal-nlb"
            },
            "tags_all": {
              "Name": "prod-internal-nlb"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.internal_nlb",
            "module.security.aws_security_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_subnet.prod_private_app_1a",
            "module.vpc.aws_subnet.prod_private_app_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-public-nlb/445b8e06a3838b8e",
            "arn_suffix": "net/prod-public-nlb/445b8e06a3838b8e",
            "dns_name": "prod-public-nlb-445b8e06a3838b8e.elb.ap-south-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-public-nlb/445b8e06a3838b8e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-public-nlb",
            "security_groups": [
              "sg-03c9fbfe09a442060"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e38685c0e8ba0fd"
              },
              {
                "subnet_id": "subnet-0d9dd90797c1ad073"
              }
            ],
            "subnets": [
              "subnet-02e38685c0e8ba0fd",
              "subnet-0d9dd90797c1ad073"
            ],
            "tags": {
              "Name": "prod-public-nlb"
            },
            "tags_all": {
              "Name": "prod-public-nlb"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:listener/net/prod-internal-nlb/ea47ca8ed5b4aef8/1976a54db89a7b71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-app-tg/8ba2b3079a8e8e80",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:listener/net/prod-internal-nlb/ea47ca8ed5b4aef8/1976a54db89a7b71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-internal-nlb/ea47ca8ed5b4aef8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb.aws_lb.internal",
            "module.nlb.aws_lb_target_group.app",
            "module.security.aws_security_group.internal_nlb",
            "module.security.aws_security_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_subnet.prod_private_app_1a",
            "module.vpc.aws_subnet.prod_private_app_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:listener/net/prod-public-nlb/445b8e06a3838b8e/2616027237b421c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-nginx-tg/0aeea1da3e6bcb5f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:listener/net/prod-public-nlb/445b8e06a3838b8e/2616027237b421c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-public-nlb/445b8e06a3838b8e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nlb.aws_lb.public",
            "module.nlb.aws_lb_target_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-app-tg/8ba2b3079a8e8e80",
            "arn_suffix": "targetgroup/prod-app-tg/8ba2b3079a8e8e80",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8081",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-app-tg/8ba2b3079a8e8e80",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-internal-nlb/ea47ca8ed5b4aef8"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-app-tg",
            "port": 8081,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-nginx-tg/0aeea1da3e6bcb5f",
            "arn_suffix": "targetgroup/prod-nginx-tg/0aeea1da3e6bcb5f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790304249797:targetgroup/prod-nginx-tg/0aeea1da3e6bcb5f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:790304249797:loadbalancer/net/prod-public-nlb/445b8e06a3838b8e"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-nginx-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-056e4abf16d8e2841",
            "description": "Security group for Java App ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056e4abf16d8e2841",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from Bastion via TGW",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Internal NLB",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aea362f478a36742"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "prod-app-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.internal_nlb",
            "module.security.aws_security_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-0121b48bb8f8f281e",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0121b48bb8f8f281e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-0a3818aa8b1253395",
            "description": "Security group for RDS Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3818aa8b1253395",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Java App",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056e4abf16d8e2841"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prod-db-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.internal_nlb",
            "module.security.aws_security_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-0aea362f478a36742",
            "description": "Security group for Internal NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aea362f478a36742",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from Nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064e737a8baf67eb6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-internal-nlb-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.nginx",
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-0994164b3e5ebb658",
            "description": "Security group for Jenkins Master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0994164b3e5ebb658",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-0aab4dc1000ffd5a0",
            "description": "Security group for Jenkins Slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aab4dc1000ffd5a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from Master",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0994164b3e5ebb658"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-jenkins-slave-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.jenkins_master",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-064e737a8baf67eb6",
            "description": "Security group for Nginx ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064e737a8baf67eb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from Bastion via TGW",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Public NLB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c9fbfe09a442060"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-nginx-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.public_nlb",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:security-group/sg-03c9fbfe09a442060",
            "description": "Security group for Public NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c9fbfe09a442060",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-public-nlb-sg",
            "name_prefix": "",
            "owner_id": "790304249797",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-south-1:790304249797:transit-gateway/tgw-04b0e155bef706520",
            "association_default_route_table_id": "tgw-rtb-0f1b512be614fe22a",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway connecting Management and Production VPCs",
            "dns_support": "enable",
            "id": "tgw-04b0e155bef706520",
            "multicast_support": "disable",
            "owner_id": "790304249797",
            "propagation_default_route_table_id": "tgw-rtb-0f1b512be614fe22a",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "prod-tgw"
            },
            "tags_all": {
              "Name": "prod-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "mgmt_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:transit-gateway-attachment/tgw-attach-0b1ee7324f17f13bf",
            "dns_support": "enable",
            "id": "tgw-attach-0b1ee7324f17f13bf",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0866f53c3575962c1"
            ],
            "tags": {
              "Name": "prod-tgw-mgmt-attachment"
            },
            "tags_all": {
              "Name": "prod-tgw-mgmt-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-04b0e155bef706520",
            "vpc_id": "vpc-02c1828d2f7cc1cdc",
            "vpc_owner_id": "790304249797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_subnet.mgmt_public_subnet_1a",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "prod_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:transit-gateway-attachment/tgw-attach-09bf0e7aef9a99453",
            "dns_support": "enable",
            "id": "tgw-attach-09bf0e7aef9a99453",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-03bd03bf4d3fe8358",
              "subnet-09c710b06857201be"
            ],
            "tags": {
              "Name": "prod-tgw-prod-attachment"
            },
            "tags_all": {
              "Name": "prod-tgw-prod-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-04b0e155bef706520",
            "vpc_id": "vpc-03cf3d3499b876ef0",
            "vpc_owner_id": "790304249797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.tgw",
            "module.vpc.aws_subnet.prod_private_app_1a",
            "module.vpc.aws_subnet.prod_private_app_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f797840a9c42353",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:elastic-ip/eipalloc-05f797840a9c42353",
            "association_id": "eipassoc-0691cc410a8251269",
            "domain": "vpc",
            "id": "eipalloc-05f797840a9c42353",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0717468fe7f11989c",
            "private_dns": "ip-10-1-1-124.ap-south-1.compute.internal",
            "private_ip": "10.1.1.124",
            "public_dns": "ec2-3-108-81-104.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.81.104",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffca48afa3084530",
            "arn": "arn:aws:ec2:ap-south-1:790304249797:elastic-ip/eipalloc-0ffca48afa3084530",
            "association_id": "eipassoc-0ca7cfe641022112c",
            "domain": "vpc",
            "id": "eipalloc-0ffca48afa3084530",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ec85cd365b925856",
            "private_dns": "ip-10-1-2-92.ap-south-1.compute.internal",
            "private_ip": "10.1.2.92",
            "public_dns": "ec2-13-203-127-195.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.127.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mgmt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:internet-gateway/igw-05f96f9ab02ef8b58",
            "id": "igw-05f96f9ab02ef8b58",
            "owner_id": "790304249797",
            "tags": {
              "Environment": "prod",
              "Name": "prod-mgmt-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-mgmt-igw"
            },
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:internet-gateway/igw-00c9020f42c5dce33",
            "id": "igw-00c9020f42c5dce33",
            "owner_id": "790304249797",
            "tags": {
              "Environment": "prod",
              "Name": "prod-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-prod-igw"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f797840a9c42353",
            "association_id": "eipassoc-0691cc410a8251269",
            "connectivity_type": "public",
            "id": "nat-0026ed5f5f9eb77ce",
            "network_interface_id": "eni-0717468fe7f11989c",
            "private_ip": "10.1.1.124",
            "public_ip": "3.108.81.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e38685c0e8ba0fd",
            "tags": {
              "Name": "prod-prod-nat-1a"
            },
            "tags_all": {
              "Name": "prod-prod-nat-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1a",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffca48afa3084530",
            "association_id": "eipassoc-0ca7cfe641022112c",
            "connectivity_type": "public",
            "id": "nat-0a3835a3e927d874f",
            "network_interface_id": "eni-0ec85cd365b925856",
            "private_ip": "10.1.2.92",
            "public_ip": "13.203.127.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9dd90797c1ad073",
            "tags": {
              "Name": "prod-prod-nat-1b"
            },
            "tags_all": {
              "Name": "prod-prod-nat-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1b",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mgmt_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:route-table/rtb-0f7d96257d7f5ae22",
            "id": "rtb-0f7d96257d7f5ae22",
            "owner_id": "790304249797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f96f9ab02ef8b58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-mgmt-public-rt"
            },
            "tags_all": {
              "Name": "prod-mgmt-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.mgmt_igw",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:route-table/rtb-008ae9bf45b3c9c81",
            "id": "rtb-008ae9bf45b3c9c81",
            "owner_id": "790304249797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0026ed5f5f9eb77ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-prod-private-rt-1a"
            },
            "tags_all": {
              "Name": "prod-prod-private-rt-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1a",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1a",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:route-table/rtb-0d10d702c41a54658",
            "id": "rtb-0d10d702c41a54658",
            "owner_id": "790304249797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3835a3e927d874f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-prod-private-rt-1b"
            },
            "tags_all": {
              "Name": "prod-prod-private-rt-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1b",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1b",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:route-table/rtb-0e21efc4084e56391",
            "id": "rtb-0e21efc4084e56391",
            "owner_id": "790304249797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c9020f42c5dce33",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-prod-public-rt"
            },
            "tags_all": {
              "Name": "prod-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt_public_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0128384806275520a",
            "route_table_id": "rtb-0f7d96257d7f5ae22",
            "subnet_id": "subnet-0866f53c3575962c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.mgmt_igw",
            "module.vpc.aws_route_table.mgmt_public_rt",
            "module.vpc.aws_subnet.mgmt_public_subnet_1a",
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_private_app_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9260cb113496be5",
            "route_table_id": "rtb-008ae9bf45b3c9c81",
            "subnet_id": "subnet-03bd03bf4d3fe8358"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1a",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1a",
            "module.vpc.aws_route_table.prod_private_rt_1a",
            "module.vpc.aws_subnet.prod_private_app_1a",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_private_app_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027862c15b3b1d390",
            "route_table_id": "rtb-0d10d702c41a54658",
            "subnet_id": "subnet-09c710b06857201be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1b",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1b",
            "module.vpc.aws_route_table.prod_private_rt_1b",
            "module.vpc.aws_subnet.prod_private_app_1b",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_private_db_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9666e2dc4f6c8a7",
            "route_table_id": "rtb-008ae9bf45b3c9c81",
            "subnet_id": "subnet-092fc78b170469038"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1a",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1a",
            "module.vpc.aws_route_table.prod_private_rt_1a",
            "module.vpc.aws_subnet.prod_private_db_1a",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_private_db_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee70f28a6ac2a80d",
            "route_table_id": "rtb-0d10d702c41a54658",
            "subnet_id": "subnet-0dd33edb15f7cbece"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1b",
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_nat_gateway.nat_1b",
            "module.vpc.aws_route_table.prod_private_rt_1b",
            "module.vpc.aws_subnet.prod_private_db_1b",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_public_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0241668d978181a75",
            "route_table_id": "rtb-0e21efc4084e56391",
            "subnet_id": "subnet-02e38685c0e8ba0fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_route_table.prod_public_rt",
            "module.vpc.aws_subnet.prod_public_subnet_1a",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_public_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b72c2788be839572",
            "route_table_id": "rtb-0e21efc4084e56391",
            "subnet_id": "subnet-0d9dd90797c1ad073"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.prod_igw",
            "module.vpc.aws_route_table.prod_public_rt",
            "module.vpc.aws_subnet.prod_public_subnet_1b",
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-0866f53c3575962c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0866f53c3575962c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-mgmt-public-1a"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-mgmt-public-1a"
            },
            "vpc_id": "vpc-02c1828d2f7cc1cdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.mgmt_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_app_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-03bd03bf4d3fe8358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bd03bf4d3fe8358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-private-app-1a"
            },
            "tags_all": {
              "Name": "prod-prod-private-app-1a"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_app_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-09c710b06857201be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c710b06857201be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-private-app-1b"
            },
            "tags_all": {
              "Name": "prod-prod-private-app-1b"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_db_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-092fc78b170469038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092fc78b170469038",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-private-db-1a"
            },
            "tags_all": {
              "Name": "prod-prod-private-db-1a"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_db_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-0dd33edb15f7cbece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd33edb15f7cbece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-private-db-1b"
            },
            "tags_all": {
              "Name": "prod-prod-private-db-1b"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-02e38685c0e8ba0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e38685c0e8ba0fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-public-1a"
            },
            "tags_all": {
              "Name": "prod-prod-public-1a"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:subnet/subnet-0d9dd90797c1ad073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9dd90797c1ad073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790304249797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-prod-public-1b"
            },
            "tags_all": {
              "Name": "prod-prod-public-1b"
            },
            "vpc_id": "vpc-03cf3d3499b876ef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mgmt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:vpc/vpc-02c1828d2f7cc1cdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0288d782aaf97eec5",
            "default_route_table_id": "rtb-085e5429c57ba9530",
            "default_security_group_id": "sg-0c45cb0cf619aa2b6",
            "dhcp_options_id": "dopt-0141aa67978c45380",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c1828d2f7cc1cdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085e5429c57ba9530",
            "owner_id": "790304249797",
            "tags": {
              "Environment": "prod",
              "Name": "prod-mgmt-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-mgmt-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790304249797:vpc/vpc-03cf3d3499b876ef0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c74ddf447fbb5390",
            "default_route_table_id": "rtb-08054a9995d7c6d72",
            "default_security_group_id": "sg-0c1772ae8b341efb5",
            "dhcp_options_id": "dopt-0141aa67978c45380",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cf3d3499b876ef0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08054a9995d7c6d72",
            "owner_id": "790304249797",
            "tags": {
              "Environment": "prod",
              "Name": "prod-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-prod-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}